@@ -7,6 +7,7 @@ V0.41 -
 - Added : German translation (THX to Lazy)
 - Added : Better check for safe-mode
 - Added : CSS Class for single-pic : class="ngg-singlepic"
+- Changed : Image quality by default 85% (THX to ArizonaGroovejet)
 - Bugfix : Fixed Permalink in album (THX to Helene D.)
 - Bugfix : Scan folder in empty gallery
 - Bugfix : Swfobjects only added with Thickbox effect
